@@ -1,4 +1,4 @@
-/* Copyright (C) 1994, 1997, 1998, 1999 Free Software Foundation, Inc.
+/* Copyright (C) 1994, 1997, 1998, 1999, 2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -27,7 +27,9 @@
 
 # ifdef __USE_POSIX
 #  define L_ctermid @L_ctermid@
-#  define L_cuserid @L_cuserid@
+#  ifndef __USE_XOPEN2K
+#   define L_cuserid @L_cuserid@
+#  endif
 # endif
 #endif
 
